--- a/rootdir/factory_init.project.rc
+++ b/rootdir/factory_init.project.rc
@@ -10,75 +10,27 @@ service akmd8963 /system/bin/akmd8963
     user system
     group system
 
-service af7133d /system/bin/af7133d
-    disabled
-    user system
-    group system
 
 on post-fs
-#
-# Connectivity related modules and character device nodes (Begin)
-#
-    #for 662x_launcher
-    chmod 0660 /dev/ttyMT2
-    chown system system /dev/ttyMT2
-
-    # STP, SDIO, WMT, GPS, FM and BT Driver
-#   insmod /system/lib/modules/mtk_hif_sdio.ko
-#   insmod /system/lib/modules/mtk_stp_wmt.ko
-#   insmod /system/lib/modules/mtk_stp_uart.ko
-#   insmod /system/lib/modules/mtk_stp_gps.ko
-#   insmod /system/lib/modules/mtk_stp_bt.ko
-#   insmod /system/lib/modules/mtk_fm_drv.ko
-#   insmod /system/lib/modules/mtk_fm_priv.ko
-#   insmod /system/lib/modules/mtk_wmt_wifi.ko
-
-    insmod /system/lib/modules/mtk_wmt_detect.ko
-    
-    # Create char device file for WMT, GPS, BT, FM, WIFI
-    mknod /dev/stpwmt c 190 0;
-    mknod /dev/stpgps c 191 0;
-    mknod /dev/stpbt  c 192 0;
-    mknod /dev/fm     c 193 0;
-    chmod 0660 /dev/stpwmt
-    chown system system /dev/stpwmt
-    chmod 0660 /dev/wmtdetect
- 		chown system system /dev/wmtdetect
- 		
-    # FM Radio device, FIXME: this is not a proper way to set permissions
-    chmod 0666 /dev/fm
- 
-    mknod /dev/wmtWifi c 153 0
-    chmod 0666 /dev/wmtWifi
-    chmod 0660 /dev/stpgps
-    chmod 0660 /dev/stpbt
-    chown bluetooth radio /dev/stpbt
-    
-    # Load WiFi Driver
-    #insmod /system/lib/modules/wlan.ko
-
-#
-# Connectivity related modules and character device nodes (Ends)
-#
+    chmod 0660 /dev/spm
+    chown system system /dev/spm
 
 on boot
 
-
-#
-# Connectivity related services (Begin)
-#
-
-service wmtLoader /system/bin/wmt_loader
-    user root
-    group root
-    oneshot
-    
-service conn_launcher /system/bin/6620_launcher -p /system/etc/firmware/
+service spm_script /system/vendor/bin/spm_loader
     user system
     group system
-    
+    oneshot
 
-#
-# Connectivity related services (End)
-#
+on property:sys.usb.config=gs1gs3
+      write /sys/class/android_usb/android0/enable 0
+      write /sys/class/android_usb/android0/idVendor ${sys.usb.vid}
+      write /sys/class/android_usb/android0/idProduct 2029
+      write /sys/class/android_usb/android0/f_acm/port_index 2,4
+      write /sys/devices/platform/mt_usb/saving 1
+      write /sys/class/android_usb/android0/functions mass_storage,adb,acm
+      write /sys/class/android_usb/android0/enable 1
+      start adbd
+      setprop sys.usb.state ${sys.usb.config}
+      setprop sys.usb.acm_idx 2,4
 
