--- a/rootdir/meta_init.modem.rc
+++ b/rootdir/meta_init.modem.rc
@@ -6,12 +6,17 @@
 
 on post-fs-data
 
-#INTERNAL_START
     write /proc/bootprof "post-fs-data: on meta modem start"
 
     # Modem related device nodes
     mkdir /data/nvram/md  0770 root system
+    mkdir /data/nvram/md3  0770 root system
+    mkdir /data/md3	0770 root system
 
+#  Build-in Modified - S
+#    insmod /vendor/lib/modules/ccci_plat.ko
+#    insmod /vendor/lib/modules/ccci.ko
+#  Build-in Modified - E
     chown radio radio /sys/kernel/ccci/boot
 
 #SeLinux
@@ -22,25 +27,33 @@ on post-fs-data
 
     # Encrypt phone function
     setprop vold.post_fs_data_done 1
-
-service permission_check /system/bin/permission_check
+    
+service permission_check /vendor/bin/permission_check
     user root
     group system radio
     oneshot
 
-service ccci_fsd /system/bin/ccci_fsd 0
+service ccci_fsd /vendor/bin/ccci_fsd 0
     user radio
     group radio system
     oneshot
 
-service ccci_mdinit /system/bin/ccci_mdinit 0
+service ccci_mdinit /vendor/bin/ccci_mdinit 0
     user system
     group radio system
     oneshot
 
-service ccci_rpcd /system/bin/ccci_rpcd 0
+service ccci3_fsd /vendor/bin/ccci_fsd 2
     user radio
     group radio system
     oneshot
 
-#INTERNAL_END
+service ccci3_mdinit /vendor/bin/ccci_mdinit 2
+    user system
+    group radio system
+    oneshot
+
+service ccci_rpcd /vendor/bin/ccci_rpcd 0
+    user radio
+    group radio system
+    oneshot
